[project]
name = "TwitterVideoDownloader"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Francis Chen", email = "breestealth@gmail.com"},
]
dependencies = ["fastapi>=0.127.0", "uvicorn[standard]>=0.40.0", "yt-dlp>=2025.12.8"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
